delete identifier
